; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp.c_ScspSlotResetDebug.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp.c_ScspSlotResetDebug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32, i32*, i32, i64 }
%struct.TYPE_4__ = type { i32* }

@debugslot = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@scsp = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@SCSP_ENV_AS = common dso_local global i32 0, align 4
@SCSP_ENV_AE = common dso_local global i32 0, align 4
@SCSP_ENV_ATTACK = common dso_local global i32 0, align 4
@scsp_attack_next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ScspSlotResetDebug(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @scsp, i32 0, i32 0), align 8
  %4 = load i64, i64* %2, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = call i32 @memcpy(%struct.TYPE_5__* @debugslot, i32* %5, i32 4)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 6), align 8
  %7 = load i32, i32* @SCSP_ENV_AS, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 5), align 8
  store i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 3), i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 4), align 8
  %8 = load i32, i32* @SCSP_ENV_AE, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 2), align 8
  %9 = load i32, i32* @SCSP_ENV_ATTACK, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 1), align 4
  %10 = load i32, i32* @scsp_attack_next, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @debugslot, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @memcpy(%struct.TYPE_5__*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
